# flight-pipeline

./: .gitignore  1624.json  2.0.0  README.md  cli.py  conf.py  dirconfig  flight_update.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  settings.json.template  setup.py  stac_template.json  update_geom.py
.github/workflows/: tests.yml
_sources/: index.rst.txt
_sources/core/: cli.rst.txt  doc.rst.txt
add/: c235*2021-05-11.json
archive/: flight_update.py  get_ids.py  requirements.txt
ceda_flight_pipeline/: cli.py  flight_client.py  flight_update.py  logger.py
ceda_flight_pipeline/tests/: test_cli.py
config/: dirconfig  settings.json.template  stac_template.json
core/: cli.html  doc.html
docs/source/: conf.py  index.rst
docs/source/core/: cli.rst  doc.rst
flightpipe/: __init__.py  calculate_coordinates.py  elastic_client.py  flight_client.py  logger.py  write_flights.py
flightpipe/updaters/: moles.py
python_scripts/: archive_meta.py  calculate_coordinates.py  elastic_client.py  find_existing_flights.py  get_archive_metadata.py  settings.json.template  utils.py  write_flights.py
python_scripts/cache/: id_history
source/: conf.py  index.rst
