[project]
name = "flight-pipeline"
version = "1.1"
description = ""
authors = [
    {name = "Ioana Circu",email = "ioana.circu@stfc.ac.uk"}
]
license = {text = "BSD 3"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "certifi (>=2022.12.7,<2023.0.0)",
    "elasticsearch (>=8.14.0,<9.0.0)",
    "sphinx (>=7.4.7,<8.0.0)",
    "urllib3 (>=1.26.14,<2.0.0)",
    "numpy (>=1.24.2,<2.0.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
flightpipe = "flightpipe.flight_update:main"